# p7_g2_multiclase

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: tests.yml
app/: data_manage.py  data_manager.py  database.py  main.py  predictor.py
data/: nonfire_excluded.json
notebooks/: 02.ipynb  02_EDA.ipynb  02a_modeling.ipynb  02b_cross_validation.ipynb  04_EDA.ipynb
reports/: 02_cv_results.json  02_ensemble_comparison.json  ensemble_comparison.json  nonfire_excluded_paths.json
reports/docs/: informe_tecnico_forest_fire.docx
scripts/: prepare_retraining.py
src/: data_loader.py
tests/: conftest.py  test_data_integrity.py  test_metrics.py  test_model.py
